--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
           </button>
         </div>
         <div class="col-md-5 col-sm-12  h-25">
-          <img src="../images/header-img.png" alt="Book" />
+          <img src="./images/header-img.png" alt="Book" />
         </div>
       </div>
     </div>
