--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </button>
         </div>
         <div class="col-md-5 col-sm-12  h-25">
-          
+
           <img src="./images/header-img.png" alt="Book" />
         </div>
       </div>
@@ -83,7 +83,7 @@
         <div class="row">
           <div class="col-md-6 col-12">
             <div class="pray">
-              <img src="../images/pexels-photo-1904769.jpeg" alt="Pray" class="" />
+              <img src="./images/pexels-photo-1904769.jpeg" alt="Pray" class="" />
             </div>
           </div>
           <div class="col-md-6 col-12">
@@ -224,7 +224,7 @@
         <div class="col-md-4 col-12 text-center">
             <div class="card mr-2 d-inline-block shadow-lg">
                 <div class="card-img-top">
-                  <img src="../images/UI-face-3.jpg" class="img-fluid border-radius p-4" alt="">
+                  <img src="./images/UI-face-3.jpg" class="img-fluid border-radius p-4" alt="">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title">Blalock Jolene</h3>
@@ -243,7 +243,7 @@
                   <div class="carousel-item active">
                     <div class="card mr-2 d-inline-block shadow">
                       <div class="card-img-top">
-                        <img src="../images/UI-face-1.jpg" class="img-fluid rounded-circle w-50 p-4" alt="">
+                        <img src="./images/UI-face-1.jpg" class="img-fluid rounded-circle w-50 p-4" alt="">
                       </div>
                       <div class="card-body">
                         <h3 class="card-title">Allen Agnes</h3>
@@ -259,7 +259,7 @@
                   <div class="carousel-item">
                     <div class="card  d-inline-block mr-2 shadow">
                       <div class="card-img-top">
-                        <img src="../images/UI-face-2.jpg" class="img-fluid rounded-circle w-50 p-4" alt="">
+                        <img src="./images/UI-face-2.jpg" class="img-fluid rounded-circle w-50 p-4" alt="">
                       </div>
                       <div class="card-body">
                         <h3 class="card-title">Amiel Barbara</h3>
@@ -278,7 +278,7 @@
         <div class="col-md-4 col-12 text-center">
             <div class="card mr-2 d-inline-block shadow-lg">
                 <div class="card-img-top">
-                  <img src="../images/UI-face-4.jpg" class="img-fluid border-radius p-4" alt="">
+                  <img src="./images/UI-face-4.jpg" class="img-fluid border-radius p-4" alt="">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title">Olivia Louis</h3>
